overflow fix

--- a/components/ImageGallery/ImageGallery.module.scss
+++ b/components/ImageGallery/ImageGallery.module.scss
@@ -35,6 +35,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            @media (max-width: 1000px) 
+            {
+                height: auto;
+            }
             img 
             {
                 height: 80vh;
